# USDB

./: .gitignore  Cargo.toml  Metadata_Structure.md  README.md  REE_ARCHITECTURE_CANISTER.md  bitcoin.conf  dfx.json  package-lock.json  package.json  whitepaper.md
src/USDB_mint/: Cargo.toml  USDB_mint.did
src/USDB_mint/src/: lib.rs
src/btc_price_backend/: Cargo.toml  btc_price_backend.did
src/btc_price_backend/src/: lib.rs
src/frontend/src/assets/data/: footer-links.jsx
src/frontend/src/components/common/: Footer.jsx
src/frontend/src/components/core/HomePage/: CodeBlocks.jsx
src/frontend/src/pages/: Home.jsx
src/notify_btc_recieved/: Cargo.toml  notify_btc_recieved.did
src/notify_btc_recieved/src/: lib.rs
src/temp_icp_project_backend/: Cargo.toml  temp_icp_project_backend.did
src/temp_icp_project_backend/src/: lib.rs
src/usdb-rune-backend/: Cargo.toml  usdb-rune-backend.did
src/usdb-rune-backend/src/: lib.rs
watcher/: config.js  notify_canister.js  package-lock.json  package.json  watcher.js
