[package]
name = "notify_btc_recieved"
version = "0.1.0"
edition = "2021"


[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = "1.0.219"
serde_json = "1.0"

ic-cdk-macros = "0.7"
async-trait = "0.1"
hex = "0.4"

